// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ship API service getAppVersion fetches a version for an app 1`] = `
Object {
  "appSlug": "an-app-slug",
  "buildNumber": "456",
  "id": 123,
  "publicInstallPageURL": "def.a.valid.url",
  "publicInstallPageUrl": undefined,
}
`;

exports[`Ship API service getAppVersionList fetches a list of versions for an app 1`] = `
Array [
  Object {
    "appSlug": "an-app-slug",
    "buildNumber": "456",
    "id": 123,
  },
]
`;

exports[`Ship API service updateAppVersion updates a version for an app 1`] = `
Object {
  "appSlug": "an-app-slug",
  "buildNumber": "456",
  "id": 123,
}
`;

exports[`Ship API service uploadScreenshots calls the api 1`] = `
Array [
  Object {
    "filename": "some-file.png",
    "uploadUrl": "http://some.url?token=123",
  },
]
`;
